--- a/Faster-RCNN-Brain-Cancer-Detector.ipynb
+++ b/Faster-RCNN-Brain-Cancer-Detector.ipynb
@@ -24,8 +24,8 @@
       },
       "outputs": [],
       "source": [
-        "HERE = Path(_dh[-1])\n",
-        "DATA = HERE / \"data\""
+        "# HERE = Path(_dh[-1])\n",
+        "# DATA = HERE / \"data\""
       ]
     },
     {
@@ -1092,11 +1092,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.11.9 64-bit (microsoft store)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.11.9"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "d1e76f36fd497ba09966a644cdb5ca2914f26d4c9a4ffe25cd98fef631710b92"
+      }
     }
   },
   "nbformat": 4,
